2003-12-24  Alexander Clausen <alex@skip86.com>

	* src/file.cpp src/modules/system.cpp: Fix for 860199; returning NULL in
	  sp_module_system_open when doc == NULL; added error dialog.

2003-12-24  MenTaLguY <mental@rydia.net>

	* src/verbs.cpp: renamed 'XOR' to 'Exclude' on the menu

	* src/object-ui.cpp: moved object-specific menuitems out onto the
	  main context menu, instead of sequestered in their own submenus.

2003-12-24  Alexander Clausen <alex@skip86.com>

	* src/interface.cpp:
	Added partial DND (drop part only for now) for image/svg and image/svg+xml,
	and a tweak to make uri-dnd with konqueror work.

2003-12-24  Daniel Borgmann <spark@mayl.de>

	* src/interface.cpp src/verbs.cpp src/object-ui.cpp src/modules/menu.cpp:
	Added mnemonics and some HIGification
	
	* src/verbs.cpp: New: sp_action_get_title(), get action name without
	underscores (for use in dialog titles or other places without mnemonics)

2003-12-23  bulia byak <bulia@dr.com>

	* src/helper/sp-canvas.h: float-to-double fix

	* src/sp-namedview.h src/sp-namedview.cpp: New namedview attributes for zoom and
	window geometry; functions for updating them from a desktop and for setting up a
	desktop from these attributes

	* src/preferences-skeleton.h: new options.savewindowgeometry 

	* src/attributes.h src/attributes.cpp: New namedview attributes

	* src/desktop.cpp: Remove/comment out extraneous code. Float-to-double fixes, prevent
	sliding when zooming in at max zoom.

	* src/file.cpp src/main.cpp src/interface.cpp: Added document_from_window and
	window_from_document hooks to file opening and saving functions

	* src/document.cpp: New: inkscape_rel2abs() (based on g_rel2abs by Shigio Yamaguchi),
	store absolute filenames in document->uri. Fixed reading namedview template from
	preferences, fixed namedview template id, added comments.

	* src/nodepath.cpp: Ctrl + click node: delete node

	* src/desktop.cpp src/file.cpp src/file.h: New save confirm dialog (patch by spark)
